--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,28 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Launch Package",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "program": "${fileDirname}",
-            "env": {
-                "API_KEY":"hqwkkah*56hfh",
-                "MONGO_URL":"mongodb://localhost:27017"
-            }
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Python: archivo actual",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "env": {"MONGO_URL": "mongodb://localhost:27017"},
+      "console": "integratedTerminal",
+      "justMyCode": true
+    },
+    {
+      "name": "Launch Package",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${fileDirname}",
+      "env": {
+        "API_KEY": "hqwkkah*56hfh",
+        "MONGO_URL": "mongodb://localhost:27017"
+      }
+    }
+  ]
 }
