--- a/backend/training-nlp/requirements.txt
+++ b/backend/training-nlp/requirements.txt
@@ -3,6 +3,7 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
+dependency-injector==4.40.0
 dnspython==2.2.1
 idna==3.3
 joblib==1.1.0
@@ -16,6 +17,7 @@ pydevd==2.8.0
 pymongo==4.2.0
 regex==2022.7.25
 requests==2.28.1
+six==1.16.0
 toml==0.10.2
 torch==1.12.1
 torchaudio==0.12.1
