--- a/backend/training-nlp/requirements.txt
+++ b/backend/training-nlp/requirements.txt
@@ -1,4 +1,6 @@
 autopep8==1.7.0
+boto3==1.24.87
+botocore==1.27.87
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
@@ -6,6 +8,7 @@ colorama==0.4.5
 dependency-injector==4.40.0
 dnspython==2.2.1
 idna==3.3
+jmespath==1.0.1
 joblib==1.1.0
 nats-py==2.1.4
 nltk==3.7
@@ -15,8 +18,10 @@ pycodestyle==2.9.1
 pydantic==1.9.2
 pydevd==2.8.0
 pymongo==4.2.0
+python-dateutil==2.8.2
 regex==2022.7.25
 requests==2.28.1
+s3transfer==0.6.0
 six==1.16.0
 toml==0.10.2
 torch==1.12.1
