--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,10 @@
       "program": "${file}",
       "env": {
         "MONGO_URL": "mongodb://localhost:27017",
-        "NATS_URL": "nats://localhost:4222"
+        "NATS_URL": "nats://localhost:4222",
+        "ACCESS_KEY": "<YOUR-ACCESS-KEY>",
+        "SECRET_ACCESS_KEY": "<YOUR-SECRET-ACCESS-KEY>",
+        "BUCKET_NAME": "<YOUR-BUCKET-NAME>"
       },
       "console": "integratedTerminal",
       "justMyCode": true
