--- a/backend/core-ia-models/requirements.txt
+++ b/backend/core-ia-models/requirements.txt
@@ -19,6 +19,7 @@ pydantic==1.9.2
 pydevd==2.8.0
 pymongo==4.2.0
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 regex==2022.7.25
 requests==2.28.1
 s3transfer==0.6.0
