--- a/frontend/chat-maker-ui/package.json
+++ b/frontend/chat-maker-ui/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.14.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.11",
+    "sweetalert": "^2.1.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
