--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# Use postgres/example user/password credentials
 version: '3.1'
 
 services:
@@ -7,7 +6,7 @@ services:
     image: mongo:5.0
     restart: always
     mem_limit: 512m
-    cpus: 0.25
+    cpus: 0.5
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: fhasgkr867fa654
@@ -25,3 +24,12 @@ services:
       - 8080:8080
     depends_on: 
       - mongo
+
+  nats-server:
+    build: project-infraestructure/messaging/.
+    image: nats-server:v1
+    restart: always
+    cpus: 0.5
+    ports:
+      - 4222:4222
+      - 8222:8222
