feat(backend): endpoint models by userId

--- a/backend/agent-manager/cmd/config/.env.dev
+++ b/backend/agent-manager/cmd/config/.env.dev
@@ -1,3 +1,4 @@
 PORT="8080"
 MONGO_URL="mongodb://root:fhasgkr867fa654@mongo:27017"
 MONGO_POOL_SIZE="2"
+NATS_URL="nats://nlpchatbots:random94566546@nats-server:4222"
