feat(backend): delete nn models by user ignored
- create nats subscriber
- create usecase function to remove from s3 and mongo the nn

--- a/backend/training-nlp/cmd/.env.dev
+++ b/backend/training-nlp/cmd/.env.dev
@@ -1,5 +1,5 @@
-MONGO_URL=mongodb://root:fhasgkr867fa654@localhost:27017
-NATS_URL=nats://nlpchatbots:random94566546@localhost:4222
+MONGO_URL=mongodb://root:fhasgkr867fa654@mongo:27017
+NATS_URL=nats://nlpchatbots:random94566546@nats-server:4222
 ACCESS_KEY=<>
 SECRET_ACCESS_KEY=<>
 BUCKET_NAME=nlp-chatbots-models
