feat: add logger, docker compose core ia
- Add loggers
- Add core ia to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,3 +50,12 @@ services:
     depends_on: 
       - mongo
       - nats-server
+  
+
+  core-ia-modes:
+    build: backend/core-ia-models/.
+    image: core-ia-models:v1
+    restart: always
+    depends_on: 
+      - mongo
+      - nats-server
