--- a/backend/licensing-manager/cmd/config/.env.dev
+++ b/backend/licensing-manager/cmd/config/.env.dev
@@ -1,3 +1,3 @@
-NATS_URL="nats://nlpchatbots:random94566546@localhost:4222"
-MONGO_URL="mongodb://root:fhasgkr867fa654@localhost:27017"
+NATS_URL="nats://nlpchatbots:random94566546@nats-server:4222"
+MONGO_URL="mongodb://root:fhasgkr867fa654@mongo:27017"
 MONGO_POOL_SIZE="2"
