--- a/frontend/chat-maker-ui/package.json
+++ b/frontend/chat-maker-ui/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-charts": "^6.0.0-alpha.12",
     "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
@@ -27,7 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.1",
+    "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.11",
     "sweetalert": "^2.1.2",
