--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,3 +59,9 @@ services:
     depends_on: 
       - mongo
       - nats-server
+  
+  web:
+    build: frontend/chat-maker-ui/.
+    image: chat-maker-ui:v1
+    ports:
+      - 4200:80 
