--- a/backend/licensing-manager/cmd/config/.env.dev
+++ b/backend/licensing-manager/cmd/config/.env.dev
@@ -1,3 +1,6 @@
-NATS_URL="nats://nlpchatbots:random94566546@nats-server:4222"
+NATS_URL="nats-server"
+NATS_PORT="4222"
+NATS_USER="nlpchatbots"
+NATS_PASSWORD="random94566546"
 MONGO_URL="mongodb://root:fhasgkr867fa654@mongo:27017"
 MONGO_POOL_SIZE="2"
