chore: update docker settings

--- a/backend/training-nlp/cmd/.env.dev
+++ b/backend/training-nlp/cmd/.env.dev
@@ -1,5 +1,11 @@
-MONGO_URL=mongodb://root:fhasgkr867fa654@mongo:27017
-NATS_URL=nats://nlpchatbots:random94566546@nats-server:4222
 ACCESS_KEY=<>
 SECRET_ACCESS_KEY=<>
-BUCKET_NAME=nlp-chatbots-models
+BUCKET_NAME=<>
+PORT=8080
+MONGO_URL=localhost
+MONGO_USER=root
+MONGO_PASSWORD=fhasgkr867fa654
+MONGO_PORT=27017
+MONGO_POOL_SIZE=2
+NATS_URL=localhost
+NATS_PORT=4222
