--- a/project-infraestructure/messaging/nats-server.conf
+++ b/project-infraestructure/messaging/nats-server.conf
@@ -5,11 +5,11 @@ port: 4222
 monitor_port: 8222
 
 # Authentication settings
-authorization {
-  user: nlpchatbots
-  password: random94566546
-  timeout: 2
-}
+# authorization {
+#   user: nlpchatbots
+#   password: random94566546
+#   timeout: 2
+# }
 
 # Logging settings
 debug: true
