--- a/backend/agent-manager/cmd/config/.env.dev
+++ b/backend/agent-manager/cmd/config/.env.dev
@@ -1,4 +1,8 @@
 PORT="8080"
-MONGO_URL="mongodb://root:fhasgkr867fa654@mongo:27017"
+MONGO_URL="localhost"
+MONGO_USER="root"
+MONGO_PASSWORD="fhasgkr867fa654"
+MONGO_PORT="27017"
 MONGO_POOL_SIZE="2"
-NATS_URL="nats://nlpchatbots:random94566546@nats-server:4222"
+NATS_URL="localhost"
+NATS_PORT="4222"
